# Variance-Swaps-Pricer

./: CMakeLists.txt  HestonLogSpotPathSimulator.cpp  HestonLogSpotPathSimulator.h  HestonVariancePathSimulator.cpp  HestonVariancePathSimulator.h  MathFunctions.cpp  MathFunctions.h  Model.cpp  Model.h  PathSimulator.cpp  PathSimulator.h  VarianceSwap.cpp  VarianceSwap.h  VarianceSwapsHestonAnalyticalPricer.cpp  VarianceSwapsHestonAnalyticalPricer.h  VarianceSwapsHestonMonteCarloPricer.cpp  VarianceSwapsHestonMonteCarloPricer.h  VarianceSwapsPricer.cpp  VarianceSwapsPricer.h  main.cpp
Tests/: test_convergence_nb_of_observations_analytical.csv  test_convergence_nb_of_observations_analytical.xlsx  test_convergence_nb_of_simulations.csv  test_convergence_nb_of_simulations.ods  test_convergence_timestep.csv  test_convergence_timestep.ods  test_convergence_timestep_2.csv  test_convergence_timestep_2.ods  test_convergence_timestep_wider.csv  test_convergence_timestep_wider.ods  test_kappa_influence.csv  test_maturity_influence.csv
